// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Polygon snapshots evaluate with correct answer renders 1`] = `
<div>
  <div
    data-testid="group"
    scalex="1"
    scaley="1"
  >
    <div
      cursor="pointer"
      data-testid="line"
      draggable="false"
      fill="rgba(137, 183, 244, 0.65)"
      opacity="0.5"
      points="94,4,89,4,36,40"
      position="relative"
      stroke="blue"
      stroke-width="0"
    />
  </div>
</div>
`;

exports[`Polygon snapshots hotspot color renders 1`] = `
<div>
  <div
    data-testid="group"
    scalex="1"
    scaley="1"
  >
    <div
      cursor="pointer"
      data-testid="line"
      draggable="false"
      fill="rgba(217, 30, 24, 0.65)"
      opacity="0.5"
      points="94,4,89,4,36,40"
      position="relative"
      stroke="blue"
      stroke-width="0"
    />
  </div>
</div>
`;

exports[`Polygon snapshots outline color renders 1`] = `
<div>
  <div
    data-testid="group"
    scalex="1"
    scaley="1"
  >
    <div
      cursor="pointer"
      data-testid="line"
      draggable="false"
      fill="rgba(137, 183, 244, 0.65)"
      opacity="0.5"
      points="94,4,89,4,36,40"
      position="relative"
      stroke="red"
      stroke-width="0"
    />
  </div>
</div>
`;

exports[`Polygon snapshots outline width renders with default border width 1`] = `
<div>
  <div
    data-testid="group"
    scalex="1"
    scaley="1"
  >
    <div
      cursor="pointer"
      data-testid="line"
      draggable="false"
      fill="rgba(137, 183, 244, 0.65)"
      opacity="0.5"
      points="94,4,89,4,36,40"
      position="relative"
      stroke="blue"
      stroke-width="0"
    />
  </div>
</div>
`;

exports[`Polygon snapshots outline width renders with given border width 1`] = `
<div>
  <div
    data-testid="group"
    scalex="1"
    scaley="1"
  >
    <div
      cursor="pointer"
      data-testid="line"
      draggable="false"
      fill="rgba(137, 183, 244, 0.65)"
      opacity="0.5"
      points="94,4,89,4,36,40"
      position="relative"
      stroke="blue"
      stroke-width="0"
    />
  </div>
</div>
`;
